--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "diet_control_api",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.ts",
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only ./src/app.ts",
+    "dev": "ts-node-dev --respawn --transpile-only ./src/server.ts",
     "test": "jest --detectOpenHandles"
   },
   "author": "",
