--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
   "license": "ISC",
   "devDependencies": {
     "@types/bcryptjs": "^2.4.5",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.20",
     "@types/jest": "^29.5.11",
     "@types/jsonwebtoken": "^9.0.5",
+    "@types/morgan": "^1.9.9",
     "@types/node": "^20.8.9",
     "@types/supertest": "^6.0.2",
+    "@types/winston": "^2.4.4",
     "eslint": "^8.52.0",
     "jest": "^29.7.0",
     "supertest": "^6.3.3",
@@ -31,6 +34,8 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
-    "mysql2": "^3.6.2"
+    "morgan": "^1.10.0",
+    "mysql2": "^3.6.2",
+    "winston": "^3.11.0"
   }
 }
