--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@types/jest": "^29.5.11",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/morgan": "^1.9.9",
-    "@types/node": "^20.8.9",
+    "@types/node": "^20.12.12",
     "@types/supertest": "^6.0.2",
     "@types/winston": "^2.4.4",
     "eslint": "^8.52.0",
@@ -36,6 +36,7 @@
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "mysql2": "^3.6.2",
-    "winston": "^3.11.0"
+    "winston": "^3.11.0",
+    "zod": "^3.23.8"
   }
 }
