--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,28 +1,25 @@
-version: '4.3'
-
 services:
   api:
-    build: .
+    build: 
+      context: .
+      dockerfile: Dockerfile
     container_name: api
     ports:
-      - "3408:3408"
+      - "3000:3000"
     depends_on:
       - database
     volumes:
       - .:/app
-    networks:
-      - diet_control
+      - /app/node_modules
+    user: node
+    command: pnpm dev
 
   database:
-    image: "mysql:5.7"
+    image: "mysql:latest"
     ports:
       - "3306:3306"
     restart: always
     environment:
       MYSQL_ROOT_PASSWORD: root
-    networks:
-      - diet_control
-
-networks:
-  diet_control:
-    driver: bridge
+    volumes:
+      - /var/diet_control/mysql
