--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "",
   "main": "app.ts",
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only ./src/server.ts",
+    "dev": "tsx --env-file=.env --watch src/server.ts",
     "test": "jest --detectOpenHandles",
-    "test:unit": "jest tests/unit"
+    "test:unit": "jest tests/unit",
+    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix"
   },
   "author": "",
   "license": "ISC",
@@ -20,12 +21,15 @@
     "@types/node": "^20.12.12",
     "@types/supertest": "^6.0.2",
     "@types/winston": "^2.4.4",
+    "@typescript-eslint/eslint-plugin": "^8.2.0",
     "eslint": "^8.52.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.7.0",
+    "prettier": "^3.0.0",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.1",
-    "ts-node": "^10.9.2",
-    "ts-node-dev": "^2.0.0",
+    "tsx": "^4.18.0",
     "typescript": "^5.2.2"
   },
   "dependencies": {
