--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "app.ts",
   "scripts": {
-    "dev": "tsx --env-file=.env --watch src/server.ts",
-    "test": "jest --detectOpenHandles",
-    "test:unit": "jest tests/unit",
+    "dev": "NODE_ENV=development tsx --env-file=.env --watch src/server.ts",
+    "test": "NODE_ENV=test jest --detectOpenHandles",
+    "test:unit": "NODE_ENV=test jest tests/unit",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix"
   },
   "author": "",
@@ -17,10 +17,8 @@
     "@types/express": "^4.17.20",
     "@types/jest": "^29.5.11",
     "@types/jsonwebtoken": "^9.0.5",
-    "@types/morgan": "^1.9.9",
     "@types/node": "^20.12.12",
     "@types/supertest": "^6.0.2",
-    "@types/winston": "^2.4.4",
     "@typescript-eslint/eslint-plugin": "^8.2.0",
     "eslint": "^8.52.0",
     "eslint-config-prettier": "^9.0.0",
@@ -41,7 +39,7 @@
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "mysql2": "^3.6.2",
-    "winston": "^3.11.0",
+    "winston": "^3.14.2",
     "zod": "^3.23.8"
   }
 }
